Fix spacing in responsive provider menu

--- a/packages/stackers-dashboard/src/styles/base/_base.scss
+++ b/packages/stackers-dashboard/src/styles/base/_base.scss
@@ -18,6 +18,10 @@ a {
     color: $primary-color-hover;
   }
 }
+ul,
+ol {
+  padding-left: 0;
+}
 .container {
   padding: 0 15px;
   margin: auto;
@@ -38,7 +42,7 @@ a {
 .w-100 {
   width: 100%;
 }
-.h-100{
+.h-100 {
   height: 100%;
 }
 .px-15 {
